Corrected hover zoom issue and title overlap on all cards (#219)
* Fix: Updated footer styling for better UI and responsiveness

* fix: resolved image zoom-out and title overlap issue on card hover

* fix:the card for different pages

--- a/index.css
+++ b/index.css
@@ -1075,7 +1075,7 @@ margin-bottom: 5%;
 
 /* Scale the entire card on hover */
 .card:hover {
-    transform: translateY(-10px) scale(1.05); /* Added scale(1.05) to existing transform */
+    transform: translateY(-4px) scale(1.01); /* Added scale(1.05) to existing transform */
     box-shadow: 0 0 15px var(--accent-color-dark), 
                 0 0 20px rgba(0, 0, 0, 0.3);
     z-index: 5; /* Ensure hovered card appears above others */
@@ -1088,7 +1088,7 @@ margin-bottom: 5%;
 }
 
 .card:hover .card-img-top {
-    transform: scale(1.5); /* Scale image slightly larger on hover */
+    transform: scale(1); /* Scale image slightly larger on hover */
 }
 
 /* Ensure the overlay text appears smoothly */
@@ -1275,7 +1275,7 @@ body.dark-mode .facility-card p {
 
 .About-card {
     width: 15rem;
-    min-height: 400px;
+    min-height: 470px;
     margin: 1rem;
     padding: 1rem;
     display: flex;
@@ -1771,6 +1771,7 @@ footer .copyright {
     width: 100%;
     margin-bottom: 10px;
   }
+
 
   .header-right img {
     width: 100%;
